--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Калькулятор</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input value="5" class="g2" type="text">
-    <input value="2" class="g1" type="text">
+    <input value="" class="g2" type="text">
+    <input value="" class="g1" type="text">
     <button class="plus" id='lll'>+</button>
     <button class="w1" id="ll2">-</button>
     <button class="w2" id="ll3">:</button>
